--- a/_posts/2019-01-11-test.md
+++ b/_posts/2019-01-11-test.md
@@ -1,3 +1,8 @@
+---
+title: title
+date: 2019-01-11
+---
+
 I think this is the name of the post I need. Not entirely sure going to check!
 
 Now I've finally gotten the name right.
